--- a/websit/jojo/about.html
+++ b/websit/jojo/about.html
@@ -18,10 +18,10 @@
 	<div class="section">
 		<nav class="nav" role="navigation">
 			<ul>
-				<li class="nav-about fade fade1"><a href="#about">关于</a></li>
-				<li class="nav-works fade fade4"><a href="#works">作品</a></li>
+				<li class="nav-about fade fade1"><a href="#about">时光</a></li>
+				<li class="nav-works fade fade4"><a href="#works">技能</a></li>
 				<li class="fade back-home"><a href="#top">首页</a></li>
-				<li class="nav-skill fade fade2"><a href="#skill">能力</a></li>
+				<li class="nav-skill fade fade2"><a href="#skill">作品</a></li>
 				<li class="nav-contact fade fade3"><a href="#contact">联系</a></li>
 			</ul>
 		</nav>
